--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "zcloud-web",
   "author": "admin<admin@cqzcloud.com>",
   "scripts": {
+    "start": "npm run dev",
     "dev": "cross-env BABEL_ENV=development webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "sit": "cross-env BABEL_ENV=development webpack-dev-server --inline --progress --config build/webpack.sit.conf.js",
     "build": "cross-env NODE_ENV=production env_config=prod node build/build.js",
