--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint": "eslint --ext .js,.vue src",
     "test": "npm run lint",
     "precommit": "lint-staged",
-    "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml"
+    "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml",
+    "release": "rm -rf dist && bash ./release.sh"
   },
   "repository": {
     "type": "git",
